styles/Home.module.css
.container {
  min-height: 100vh;
  padding: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.main {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.title {
  font-size: 14vw;
  line-height: 1.15;
  margin: 3rem 0 0;
  padding-left: 3rem;
  padding-right: 3rem;
}

@media screen and (min-width: 800px) {
  .title {
    font-size: 128px;
  }
}

.title,
.description {
  text-align: center;
}

.description {
  font-size: 1rem;
  font-style: italic;
  font-weight: bold;
  letter-spacing: 0.1rem;
  line-height: 1.5;
  margin: 0;
  padding-left: 0.75em;
  padding-right: 0.75em;
  text-transform: uppercase;
}

.grid {
  display: flex;
  align-items: stretch;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 80em;
  padding: 0;
  margin-top: 3rem;
  border-top: 1px solid #ddd;
}

@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
}

.card {
  border-bottom: 1px solid #ddd;
  border-left: 1px solid #ddd;
  border-right: 1px solid #ddd;
  color: inherit;
  list-style: none;
  padding: 1.5rem;
  text-align: left;
  text-decoration: none;
  transition: color 0.15s ease, border-color 0.15s ease;
}
@media screen and (max-width: 959px) {
  .card {
    flex-basis: calc(50%);
  }
}
@media screen and (min-width: 960px) {
  .card {
    flex-basis: calc(33.3%);
  }
}

.card h3 {
  margin: 0;
  font-size: 1.5rem;
}

.card h4 {
  font-size: 1rem;
}

.cardDescription {
  margin-top: 1rem;
  margin-bottom: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

.price {
  font-size: 1rem;
  font-weight: bold;
}

.priceType {
  border: 1px solid black;
  display: inline-block;
  font-size: 0.85rem;
  margin-left: 0.1rem;
  padding: 0.075rem 0.25rem;
  position: relative;
  text-transform: uppercase;
}

.button {
  font-size: 0.9rem;
  margin: 1rem 0 0;
  border: 0 none;
  appearance: none;
  padding: 0.5rem 1rem;
  font-weight: bold;
  background: black;
  color: white;
  border-radius: 5px;
  cursor: pointer;
  box-shadow: #0f03 -0px 0 0, #f0f3 0px 0 0;
  transition: box-shadow 0.6s;
}

.button:hover,
.button:focus {
  outline: none;
  transition: box-shadow 0.2s;
  box-shadow: #0f06 -10px -5px 0, #f0f6 10px 5px 0;
}

.button:disabled {
  cursor: not-allowed;
}

.button:disabled:hover,
.button:disabled:focus {
  box-shadow: #0003 -10px -5px 0, #0003 10px 5px 0;
}

.button:active:not(:disabled) {
  transition: background-image 0.1s;
  background-image: linear-gradient(330deg, #0f09, #f0f9);
}

